tests/negative/07_return_type_mismatch.nova
// EXPECT-ERROR: "type"
fn get_string() -> i32 {
    return "string";  // error: type mismatch
}
fn main() -> i32 {
    return 0;
}
